# mdemu

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
include/: bus.h  cpu.h  machine.h  machine_NES.h  machine_debug.h  memory.h  types.h  units.h
src/: bus.cc  cpu.cc  machine_NES.cc  machine_debug.cc  main.cc
tests/: Makefile
tests/mach_dbg/: Makefile  mach_dbg.cfg  rom.s
tests/mach_dbg/unit/: sanity_test.cc
